--- a/BookmarksWebApp/appsettings.json
+++ b/BookmarksWebApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BookmarksWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=BookmarksWebAppContext-9f5c5dbb-b63a-420a-8f75-7caa0e6ee357;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
